# mcp-python-exec-sandbox

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish-docker.yml  publish.yml
e2e_tests/: test_data_science.py  test_docker_sandbox.py  test_mcp_protocol.py  test_multi_version.py  test_package_install.py  test_real_execution.py  test_sandbox_enforcement.py
profiles/: Dockerfile  sandbox_macos.sb  warmup_packages.txt
src/mcp_python_exec_sandbox/: __init__.py  __main__.py  cache.py  config.py  errors.py  executor.py  output.py  sandbox.py  sandbox_docker.py  sandbox_linux.py  sandbox_macos.py  script.py  server.py
src/mcp_python_sandbox/: __main__.py  cache.py  errors.py  executor.py  output.py  sandbox.py  sandbox_docker.py  sandbox_linux.py  sandbox_macos.py  script.py  server.py
tests/: conftest.py  test_config.py  test_executor.py  test_integration.py  test_output.py  test_sandbox.py  test_script.py  test_server.py
