[project]
name = "mcp-python-sandbox"
version = "0.1.0"
description = "MCP server for secure Python script execution with automatic dependency management"
requires-python = ">=3.13"
license = "MIT"
dependencies = ["fastmcp>=2.0,<3", "tomli-w>=1.0"]

[project.scripts]
mcp-python-sandbox = "mcp_python_sandbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e_tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
