[project]
name = "mcp-python-exec-sandbox"
version = "0.1.6"
description = "MCP server for secure Python script execution with automatic dependency management"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Zhengda Lu" }]
keywords = ["mcp", "sandbox", "python", "execution", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Security",
]
dependencies = ["fastmcp>=2.0,<3", "tomli-w>=1.0"]

[project.urls]
Homepage = "https://github.com/lu-zhengda/mcp-python-exec-sandbox"
Repository = "https://github.com/lu-zhengda/mcp-python-exec-sandbox"
Issues = "https://github.com/lu-zhengda/mcp-python-exec-sandbox/issues"

[project.scripts]
mcp-python-exec-sandbox = "mcp_python_exec_sandbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python_exec_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e_tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests", "e2e_tests"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
